--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^4.13.7",
+    "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.9.0"
   }
 }
